# audl

./: .cz.yaml  .gitignore  .pre-commit-config.yaml  LICENCE  README.md  makefile  notes.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
audl/: __init__.py
audl/stats/endpoints/: __init__.py  _base.py  alltimeplayerstats.py  gamestats.py  gamestatsboxscores.py  gamestatsevent.py  gamestatslineups.py  gamestatsrosters.py  gamestatsteamstats.py  playerprofile.py  playerstats.py  seasonplayerstats.py  seasonschedule.py  teamgamestats.py  teamseasonplayerstats.py  teamseasonschedule.py  teamstats.py  utils.py
audl/stats/static/: __init__.py  constants.py  miscellaneous.py  players.py  players_df.py  teams.py  teams_df.py  utils.py
docs/audl/: index.html
docs/audl/stats/: index.html
examples/: Endpoints - Game Statistics.ipynb  Endpoints - Player Profile.ipynb  Endpoints - Player Stats.ipynb  Endpoints - Season Schedule.ipynb  Endpoints - Team Game Stats.ipynb
sql/: create_game_metadata.sql  create_schedule_table.sql  create_season_roster.sql  create_team_season_id.sql
tests/stats/endpoints/: test_alltimeplayerstats.py  test_gamestats.py  test_gamestatsboxscores.py  test_gamestatslineups.py  test_gamestatsrosters.py  test_gamestatsteamstats.py  test_playerprofile.py  test_playerstats.py  test_seasonplayerstats.py  test_seasonschedule.py  test_teamgamestats.py  test_teamplayerstats.py  test_teamseasonplayerstats.py  test_teamseasonschedule.py  test_teamstats.py  test_utils.py
tests/stats/static/: test_players.py  (+3 more)
workflows/: todo.md  utils.py
(+14 files in other folders)
